--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -33,11 +33,11 @@ layout: compress
       <div class="not-found">
         <div class="container">
           <div class="title">404</div>
-          <p class="phrase">😕 hmm... seems you lost from my journey.</p>
+          <p class="phrase">don't worry, you are never truly lost from your journey</p>
           <a class="solution" href="{{ site.url }}">back home</a>
         </div>
       </div>
-    </main>  
+    </main>
     {% include footer.html %}
   </div>
     
