--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ home: true
 {%- for post in site.posts limit: site.number_of_posts -%}
 <article class="post-item">
   <h4 class="post-item-title">
-    <a href="{{ post.url }}">{{ {post.tags[0] + post.title} | escape }}</a>
+    <a href="{{ post.url }}">{{ post.title | escape }}</a>
   </h4>
 </article>
 {%- endfor -%}
