--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 home: true
 ---
 
-<a href="https://appsinacup.com/projects/"><h3 class="posts-item-note" aria-label="Projects">projects</h3></a>
+<h3 class="posts-item-note" aria-label="Projects">projects</h3>
 
 <main class="page-content" aria-label="Content">
   {% include anchor_headings.html html=content anchorClass="anchor-head" beforeHeading=true h_min=4 h_max=4 %}
